--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.7</maven.compiler.source>
     </properties>
     <profiles>
         <profile>
@@ -76,6 +78,11 @@
             <artifactId>commons-logging</artifactId>
             <version>1.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -108,7 +115,7 @@
                         <configuration>
                             <mainClass>org.jooq.util.GenerationTool</mainClass>
                             <arguments>
-                                <argument>src/main/resources/META-INF/generated/jooq-config.xml</argument>
+                                <argument>src/main/resources/generated/jooq-config.xml</argument>
                             </arguments>
                             <additionalClasspathElements>
                                 <additionalClasspathElement>${project.basedir}</additionalClasspathElement>
@@ -123,7 +130,7 @@
                 <configuration>
                     <filesets>
                         <fileset>
-                            <directory>src/main/resources/META-INF/generated</directory>
+                            <directory>src/main/resources/generated</directory>
                             <includes>
                                 <include>**/*</include>
                             </includes>
